@@ -36,6 +36,8 @@ Print the linker flags that are necessary to link \fIlibxine\fP to a program.
 Print the compiler flags (for C and Objective C, respectively) that are
 necessary to compile a program that uses \fIlibxine\fP.
 .TP 8
+.B  \-\-bindir
+.TQ 8
 .B  \-\-plugindir
 .TQ 8
 .B  \-\-datadir
@@ -43,8 +45,8 @@ necessary to compile a program that uses \fIlibxine\fP.
 .B  \-\-scriptdir
 .TQ 8
 .B  \-\-localedir
-Print the directory where, respectively, \fIlibxine\fP plugins, data files,
-scripts and locale data are stored/expected.
+Print the directory where, respectively, \fIlibxine\fP binaries, plugins,
+data files, scripts and locale data are stored/expected.
 .TP 8
 .B  \-\-prefix=PREFIX
 If specified, use PREFIX instead of the installation prefix that \fIxine-lib\fP
